# finalyze

./: .gitignore  README.md  analyze.py  bacon.toml  bank_leumi.py  main.py  plutil.py  pyproject.toml  requirements.txt  source.py  tag.py  utils.py
finalyze/: __init__.py  analyze.py  cli.py  config.py  display.py  filters.py  run.py  source.py  tag.py
finalyze/analysis/: __init__.py  analyze.py  plot.py  tables.py
finalyze/source/: __init__.py  data.py  ingest.py  leumi.py  parsing.py  raw.py  schema.py  source.py  tag.py
finalyze/source/parsers/: csv.py  leumi.py
finalyze/tags/: tag.py  tagger.py
finalyze/templates/: figure.html  figures_script.js  index.html  index_script.js  plots.html  script.js  style.css  table.html
scripts/: format.sh  lint.sh
