[project]
name = "finalyze"
version = "0.1.0"
description = "Personal financial analysis tool"
requires-python = ">=3.12"
dependencies = [
    "arrow==1.3.0",
    "polars==1.8.2",
    "pandas==2.2.3",
    "lxml==5.3.0",
    "pyarrow==18.0.0",
]

[project.scripts]
finalyze = "finalyze.cli:main"

[build-system]
requires = ["flit_core>=3.10.1"]
build-backend = "flit_core.buildapi"
