[project]
name = "finalyze"
version = "0.1.0"
description = "Personal financial analysis tool"
requires-python = ">=3.13"
dependencies = [
    "polars==1.25.2",
    "pandas==2.2.3",
    "lxml==5.3.0",
    "pyarrow==18.0.0",
    "plotly==5.24.1",
    "readchar==4.2.1",
    "pydantic==2.10.4",
    "pydantic_extra_types==2.10.1",
    "pendulum==3.0.0",
    "toml==0.10.2",
]

[project.scripts]
finalyze = "finalyze.run:main"

[build-system]
requires = ["flit_core>=3.10.1"]
build-backend = "flit_core.buildapi"
